DG_A1_04:Travel Point:Fixed layout issues

--- a/src/styles/components/_decor.scss
+++ b/src/styles/components/_decor.scss
@@ -13,7 +13,7 @@
             border-radius: 50%;
             padding: abstracts.pxToRem(33px);
             left: 95.8%;
-            top: 30%;
+            top: 31%;
         }
     }
     &__arrow {
